# an-web

./: .gitignore  README.ko.md  README.md  implementation_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_interface_verify.py  test_naver_snapshot.py  test_naver_verify.py
.github/workflows/: ci.yml  deploy.yml
an_web/: __init__.py
an_web/actions/: __init__.py  base.py  click.py  eval_js.py  extract.py  input.py  navigate.py  scroll.py  submit.py  wait_for.py
an_web/api/: __init__.py  models.py  rpc.py  tool_schema.py
an_web/browser/: __init__.py  parser.py
an_web/core/: __init__.py  engine.py  scheduler.py  session.py  snapshot.py  state.py
an_web/dom/: __init__.py  document.py  mutation.py  nodes.py  selectors.py  semantics.py
an_web/js/: __init__.py  bridge.py  host_api.py  runtime.py  timers.py
an_web/layout/: __init__.py  flow.py  hit_test.py  visibility.py
an_web/net/: __init__.py  client.py  cookies.py  loader.py  resources.py
an_web/policy/: __init__.py  approvals.py  checker.py  rules.py  sandbox.py
an_web/semantic/: __init__.py  affordances.py  extractor.py  page_type.py  roles.py
an_web/tracing/: __init__.py  artifacts.py  logs.py  replay.py
tests/: conftest.py
tests/fixtures/: article.html  dashboard.html  error.html  login.html  search_home.html  search_results.html
tests/integration/: test_login_comprehensive.py  test_login_flow.py  test_search_extract.py  test_search_extract_comprehensive.py
tests/unit/actions/: test_actions.py
tests/unit/api/: test_models.py  test_rpc.py  test_tool_schema.py
tests/unit/browser/: test_parser.py
tests/unit/core/: test_scheduler.py  test_session_engine.py  test_snapshot.py
tests/unit/dom/: test_mutation.py  test_nodes.py  test_selectors.py  test_semantics.py
tests/unit/js/: test_bridge.py  test_host_api.py  test_runtime.py  test_timers.py
tests/unit/layout/: test_flow.py  test_hit_test.py  test_visibility.py
tests/unit/net/: test_client.py  test_cookies.py  test_loader.py  test_resources.py
tests/unit/policy/: test_approvals.py  test_checker.py  test_rules.py  test_sandbox.py
tests/unit/semantic/: test_affordances.py  test_extractor.py  test_page_type.py  test_roles.py
tests/unit/tracing/: test_artifacts.py  test_logs.py  test_replay.py
