[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "an-web"
version = "0.1.0"
description = "AN-Web: AI-Native Web Browser Engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["browser", "ai", "web", "automation", "headless"]

dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "html5lib>=1.1",
    "pydantic>=2.7.0",
    "cssselect>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
